--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@100;400;900&family=Roboto+Condensed:wght@300&family=Roboto+Slab:wght@100&display=swap');
+
 a > img {
     width: 200px;
     height: 50px;
@@ -79,13 +81,14 @@ div > iframe {
     background-color: rgb(0, 0, 0, .5);
     padding: 20px;
     border-radius: 5px;
-    color: rgb(245, 245, 245, 0.6);
+    color: rgb(245, 245, 245, 0.88);
     width: 69vw;
     border-bottom: #ffc107 solid 3px;
   }
 
   .cuadro > p {
       font-size: 15px;
-      letter-spacing: 1.2px;
-      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      letter-spacing: 1.5px;
+      font-weight: 100;
+      font-family: 'Roboto Slab', serif;
   }
